# midas-shell

./: .bumpversion.cfg  .gitignore  Cargo.toml  LICENSE  Makefile.dev  Makefile.prod  README.md
config/: config.toml  midas_starship.toml  tickers_template.json
make/: Makefile.prod
scripts/: build.sh  install.sh  test.sh
src/: cli.rs  cli_main.rs  context.rs  error.rs  lib.rs  logger.rs  main.rs  repl.rs  shell_main.rs  tickers.rs  utils.rs  vendors.rs  zcli.rs
src/cli/: backtest.rs  commands.rs  dashboard.rs  help.rs  historical.rs  instrument.rs  live.rs  main.rs  midas.rs  mod.rs  strategies.rs  utils.rs
src/cli/commands/: backtest.rs  historical.rs  instrument.rs  live.rs  midas.rs  strategies.rs
src/cli/commands/vendors/: databento.rs
src/cli/vendors/: databento.rs
src/commands/: mod.rs
src/pipeline/: mod.rs  utils.rs
src/pipeline/midas/: checks.rs  compare.rs  load.rs
src/pipeline/vendors/: mod.rs
src/pipeline/vendors/v_databento/: client.rs  compare.rs  extract.rs  mod.rs  transform.rs  utils.rs
src/repl/: completer.rs  header.rs  mod.rs  prompt.rs
src/shell/: commands.rs  completer.rs  header.rs  main.rs  mod.rs  prompt.rs  table.rs
src/shell/commands/: backtest.rs  clear.rs  exit.rs  historical.rs  instrument.rs  live.rs  midas.rs  processes.rs  strategies.rs
src/vendors/: mod.rs  v_databento.rs
src/vendors/databento/: client.rs  compare.rs  extract.rs  mod.rs  transform.rs
src/vendors/midas/: checks.rs  compare.rs  load.rs  mod.rs
src/vendors/v_databento/: compare.rs  extract.rs  transform.rs  utils.rs
tests/: integration_test.rs  tickers.json
tests/config/: config.toml
tests/data/databento/: GLBX.MDP3_bbo-1m_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_ZM.n.0_GC.n.0_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_mbp-1_HE.n.0_2024-08-20T00:00:00Z_2024-08-20T05:00:00Z.dbn  GLBX.MDP3_mbp-1_HE.n.0_2024-11-27T00:00:00Z_2024-11-29T00:00:00Z.dbn  GLBX.MDP3_mbp-1_HEQ4_2024-03-05T00:00:00Z_2024-03-06T00:00:00Z.dbn  GLBX.MDP3_mbp-1_ZM.n.0_GC.n.0_2024-08-20T00:00:00Z_2024-08-20T05:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_ZM.n.0_GC.n.0_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_tbbo_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_tbbo_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_tbbo_ZM.n.0_GC.n.0_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_trades_HE.c.0_HE.c.1_LE.c.0_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_trades_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-02-13T00:00:00Z_2024-02-17T00:00:00Z.dbn  GLBX.MDP3_trades_ZM.n.0_GC.n.0_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn
tests/strategies/strategy1/: config.toml  logic.py
tests/strategies/strategy2/: config.toml
(+9 files in other folders)
