[package]
name = "repl-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
prettytable ="0.10.0"
reedline ="0.35.0"
nu-ansi-term = "0.50.1"
clap = {version= "4.5.13", features = ["derive"] }
thiserror = "1.0.61"
serde = {version ="1.0.205", features = ["derive"]}
serde_json = "1.0.122"
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "io-util", "rt-multi-thread"] }
toml = "0.8.19"
databento = "0.14.1"
time = { version = "0.3", features = ["macros"] }
walkdir = "2.3"
async-compression = { version = "0.4.11", features = ["tokio", "zstd"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.2.0"
console = "0.15"
mbn = { git = "https://github.com/midassystems/mbn.git", branch = "main" }
midas_client = { git ="https://github.com/midassystems/midas-rs.git", branch ="main" }

# chrono = "0.4"
# tokio = {version ="1.38.1", features = ["full"]}
# dirs = "5.0.1"
# crossterm = "0.28.1"
# clap_derive = "4.5.13"
# plotters = "0.3.1"
# warp = "0.3.7"

[dev-dependencies]
anyhow = "1.0.86"
dotenv = "0.15"
serial_test = "3.1.1"
once_cell = "1.10.0"  

[lib]
path = "src/lib.rs"

[[bin]]
name = "midas-shell"
path = "src/shell_main.rs"

# Define the CLI binary
[[bin]]
name = "midas-cli"
path = "src/cli_main.rs"

